--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,7 @@
 [tox]
 envlist =
     py{27,36}-django{18,111},
+    py27-django18-makemigrations
     lint
 
 [testenv]
@@ -16,6 +17,11 @@ commands =
     coverage report
 
 [testenv:lint]
-basepython=python2.7
-deps=pylint
-commands=pylint userproperty
+skip_install = true
+deps = pylint
+commands = - pylint userproperty
+
+[testenv:py27-django18-makemigrations]
+skip_install = true
+commands =
+    python make_migrations.py
